implemented show of events, started client server architecture, initalized choicebox

--- a/src/controllerview/bookV.fxml
+++ b/src/controllerview/bookV.fxml
@@ -14,8 +14,8 @@
             <Font name="System Bold" size="31.0" />
          </font>
       </Label>
-      <ChoiceBox id="eventCB" layoutX="218.0" layoutY="102.0" prefWidth="150.0" />
-      <Button id="bookBTN" layoutX="267.0" layoutY="271.0" mnemonicParsing="false" text="book" />
+      <ChoiceBox id="eventCB" fx:id="eventCB" layoutX="218.0" layoutY="102.0" prefWidth="150.0" />
+      <Button id="bookBTN" fx:id="bookBTN" layoutX="267.0" layoutY="271.0" mnemonicParsing="false" text="book" />
       <Label layoutX="232.0" layoutY="59.0" text="Choose Event:">
          <font>
             <Font size="22.0" />
@@ -26,7 +26,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <Spinner id="seatsSpinner" layoutX="219.0" layoutY="187.0" />
+      <Spinner id="seatsSpinner" fx:id="seatsSpinner" layoutX="219.0" layoutY="187.0" />
       <Button fx:id="importBTN" layoutX="534.0" layoutY="10.0" mnemonicParsing="false" onAction="#importEvent" text="Import" />
    </children>
 </AnchorPane>
